add embedding API version to backend environment template

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -12,6 +12,7 @@ AZURE_SEARCH_INDEX_NAME=documents-index
 AZURE_OPENAI_API_KEY=your-openai-api-key
 AZURE_OPENAI_ENDPOINT=https://your-openai-resource.openai.azure.com/
 AZURE_OPENAI_API_VERSION=2023-09-01-preview
+AZURE_OPENAI_EMBEDDING_API_VERSION=2023-05-15
 AZURE_OPENAI_EMBEDDING_DEPLOYMENT=text-embedding-ada-002
 AZURE_OPENAI_CHAT_DEPLOYMENT=gpt-4
 
