--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
+    "axios": "^1.8.4",
+    "dompurify": "^3.2.4",
+    "marked": "^15.0.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
     "tailwindcss": "^4.0.14"
   },
