--- a/backend/.env.template
+++ b/backend/.env.template
@@ -20,6 +20,15 @@ AZURE_OPENAI_CHAT_DEPLOYMENT=gpt-4
 UPLOAD_DIR=uploads
 MAX_UPLOAD_SIZE=10485760  # 10MB in bytes
 
+
+# S3 Storage Settings
+USE_S3_STORAGE=true
+AWS_ACCESS_KEY_ID=your-aws-access-key
+AWS_SECRET_ACCESS_KEY=your-aws-secret-key
+AWS_REGION=us-east-1
+S3_BUCKET_NAME=your-s3-bucket-name
+S3_PREFIX=documents/
+
 # Chunking Settings
 CHUNK_SIZE=1000
 CHUNK_OVERLAP=200
